traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:11: error: value ecritMessage is not a member of Unit
possible cause: maybe a semicolon is missing before `value ecritMessage'?
  }ecritMessage(30)}
   ^